--- a/package.json
+++ b/package.json
@@ -1,15 +1,40 @@
 {
-  "name": "proyecto-ventas",
+  "private": true,
+  "name": "my-app",
+  "description": "My application description",
   "version": "1.0.0",
-  "main": "src/index.js",
-  "repository": "https://github.com/AndresJG11/proyecto-ventas.git",
-  "author": "Andres JG <anjimenez11@hotmail.com>",
-  "license": "MIT",
+  "author": "Yoshihide Shiono <shiono.yoshihide@gmail.com>",
+  "main": "app/background.js",
   "scripts": {
-    "start": "electron src/index.js"
+    "dev": "nextron",
+    "build": "nextron build",
+    "postinstall": "electron-builder install-app-deps",
+    "build:all": "nextron build --all",
+    "build:win32": "nextron build --win --ia32",
+    "build:win64": "nextron build --win --x64",
+    "build:mac": "nextron build --mac --x64",
+    "build:linux": "nextron build --linux"
   },
   "dependencies": {
-    "electron": "^10.1.0",
-    "electron-reload": "^1.5.0"
+    "@zeit/next-sass": "^1.0.1",
+    "electron-serve": "^1.0.0",
+    "electron-store": "^5.2.0",
+    "sass": "^1.26.10"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@material-ui/core": "^4.10.1",
+    "@types/node": "^14.0.5",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "babel-loader": "^8.1.0",
+    "electron": "^9.0.3",
+    "electron-builder": "^22.7.0",
+    "next": "^9.4.4",
+    "nextron": "^5.15.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "typescript": "^3.9.5",
+    "webpack": "^4.43.0"
   }
 }
