--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:linux": "nextron build --linux"
   },
   "dependencies": {
+    "@material-ui/icons": "^4.9.1",
     "@zeit/next-sass": "^1.0.1",
     "electron-serve": "^1.0.0",
     "electron-store": "^5.2.0",
