--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "aws-sdk": "^2.745.0",
     "electron-serve": "^1.0.0",
     "electron-store": "^5.2.0",
+    "react-material-ui-form-validator": "^2.1.1",
     "sass": "^1.26.10",
     "sqlite": "^4.0.14",
     "sqlite3": "^5.0.0",
