--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@react-pdf/renderer": "^1.6.11",
     "@zeit/next-sass": "^1.0.1",
     "aws-sdk": "^2.745.0",
     "electron-serve": "^1.0.0",
